--- a/WanderLust/views/listings/edit.ejs
+++ b/WanderLust/views/listings/edit.ejs
@@ -3,7 +3,7 @@
   <div class="row mt-3">
     <div class="col-8 offset-2">
       <h3>Edit your Listings :</h3><br>
-      <form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
+      <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation">
         <div class="mb-3">
           <label for="title" class="form-label">Title</label>
           <input
@@ -11,19 +11,22 @@
             value="<%= listing.title %>"
             type="text"
             class="form-control"
+            required
           />
+          <div class="valid-feedback">Title looks good!</div>
         </div>
         <div class="mb-3">
           <label for="title" class="form-label">Description</label>
-          <textarea name="listing[description]" class="form-control">
+          <textarea name="listing[description]" class="form-control" required>
              <%= listing.description %>
           </textarea>
+          <div class="invalid-feedback">Please enter a short description</div>
         </div>
         <div class="mb-3">
           <label for="image" class="form-label">Image Link</label>
           <input
-            name="listing[image_url]"
-            value="<%= listing.image %>"
+            name="listing[image][url]"
+            value="<%= listing.image.url %>"
             type="text"
             class="form-control"
           />
@@ -37,7 +40,9 @@
               value="<%= listing.price %>"
               type="text"
               class="form-control"
+              required
             />
+            <div class="invalid-feedback">Price should be valid</div>
           </div>
   
           <div class="mb-3 col-md-4">
@@ -47,21 +52,26 @@
               value="<%= listing.country %>"
               type="text"
               class="form-control"
+              required
             />
+            <div class="invalid-feedback">Country name should be valid</div>
           </div>
         </div>
 
         <div class="mb-3">
-          <label for="country" class="form-label">Country</label>
+          <label for="location" class="form-label">Location</label>
           <input
             name="listing[location]"
             value="<%= listing.location %>"
             type="text"
             class="form-control"
+            required
           />
+          <div class="invalid-feedback">Location should be valid</div>
         </div>
         <button class="btn btn-dark add-btn mt-3">Edit</button><br><br>
       </form>
     </div>
   </div>
+  <script src="/js/script.js"></script>
 </body>
