--- a/WanderLust/views/listings/new.ejs
+++ b/WanderLust/views/listings/new.ejs
@@ -3,7 +3,7 @@
   <div class="row mt-3">
     <div class="col-8 offset-2">
       <h3>Creating New Listing :</h3><br><br>
-      <form method="POST" action="/listings">
+      <form method="POST" action="/listings" novalidate class="needs-validation">
         <div class="mb-3">
           <label for="title" class="form-label">Title</label>
           <input
@@ -11,16 +11,19 @@
             placeholder="Add a catchy title"
             type="text"
             class="form-control"
+            required
           />
+          <div class="valid-feedback">Title looks good!</div>
         </div>
         <div class="mb-3">
           <label for="title" class="form-label">Description</label>
-          <textarea name="listing[description]" class="form-control"></textarea>
+          <textarea name="listing[description]" class="form-control" required></textarea>
+          <div class="invalid-feedback">Please enter a short description</div>
         </div>
         <div class="mb-3">
           <label for="image" class="form-label">Image Link</label>
           <input
-            name="listing[image]"
+            name="listing[image.url]"
             placeholder="enter image URL/Link"
             type="text"
             class="form-control"
@@ -32,9 +35,10 @@
             <input
               name="listing[price]"
               placeholder="1200"
-              type="number"
               class="form-control"
+              required
             />
+            <div class="invalid-feedback">Price should be valid</div>
           </div>
           <div class="mb-3 col-md-8">
             <label for="country" class="form-label">Country</label>
@@ -43,7 +47,9 @@
               placeholder="India"
               type="text"
               class="form-control"
+              required
             />
+            <div class="invalid-feedback">Country name should be valid</div>
           </div>
         </div>
         <div class="mb-3">
@@ -53,7 +59,9 @@
             placeholder="Muzaffarpur, Bihar"
             type="text"
             class="form-control"
+            required
           />
+          <div class="invalid-feedback">Location should be valid</div>
         </div>
         <button class="btn btn-dark add-btn mt-3 mb-3">Add</button>
       </form>
