--- a/WanderLust/views/includes/navbar.ejs
+++ b/WanderLust/views/includes/navbar.ejs
@@ -1,4 +1,3 @@
-
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"><i class="fa-solid fa-compass"></i></a>
@@ -15,6 +14,14 @@
         <a class="nav-link" href="/">Home</a>
         <a class="nav-link" href="/listings">All Listings</a>
         <a class="nav-link" href="/listings/new">Add new Listings</a>
+      </div>
+      <div class="navbar-nav ms-auto">
+        <% if(!currUser) { %>
+        <a class="nav-link" href="/signup">Sign Up</a>
+        <a class="nav-link" href="/login">Log in</a>
+        <% } %> <% if(currUser) { %>
+        <a class="nav-link" href="/logout">Log out</a>
+        <% } %>
       </div>
     </div>
   </div>
