--- a/WanderLust/views/users/signup.ejs
+++ b/WanderLust/views/users/signup.ejs
@@ -8,7 +8,7 @@
             <div class="mb-3">
                 <label for="username" class="form-label">username</label>
                 <input
-                  name="username "
+                  name="username"
                   id="username"
                   type="text"
                   class="form-control"
@@ -20,8 +20,8 @@
             <div class="mb-3">
                 <label for="E-mail" class="form-label">E-mail</label>
                 <input
-                  name="E-mail "
-                  id="E-mail"
+                  name="email"
+                  id="email"
                   type="email"
                   class="form-control"
                   required
@@ -32,7 +32,7 @@
             <div class="mb-3">
                 <label for="password" class="form-label">password</label>
                 <input
-                  name="password "
+                  name="password"
                   id="password"
                   type="password"
                   class="form-control"
