--- a/WanderLust/views/listings/new.ejs
+++ b/WanderLust/views/listings/new.ejs
@@ -20,15 +20,18 @@
           <textarea name="listing[description]" class="form-control" required></textarea>
           <div class="invalid-feedback">Please enter a short description</div>
         </div>
+        <!-- image -->
         <div class="mb-3">
           <label for="image" class="form-label">Image Link</label>
           <input
-            name="listing[image.url]"
+            name="listing[image][url]"
             placeholder="enter image URL/Link"
             type="text"
             class="form-control"
+            value='https://images.unsplash.com/photo-1501785888041-af3ef285b470?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fHRyYXZlbHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=800&q=60'
           />
         </div>
+
         <div class="row">
           <div class="mb-3 col-md-4">
             <label for="price" class="form-label">Price</label>
