--- a/WanderLust/views/listings/show.ejs
+++ b/WanderLust/views/listings/show.ejs
@@ -5,9 +5,10 @@
         <h3><%= listing.title %></h3>
     </div>
     <div class="card col-6 offset-3 show-card listing-card">
-        <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
+        <img src="<%=listing.image ? listing.image.url : 'https://images.unsplash.com/photo-1501785888041-af3ef285b470?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fHRyYXZlbHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=800&q=60' %>" class="card-img-top show-img" alt="listing_image">
+
         <div class="card-body">
-            <p class="card-text">Owned by <i><%= listing.owner.username %></i> </p>
+            <p class="card-text">Owned by <i><%= listing.owner ? listing.owner.username : "Unknown" %></i> </p>
             <p class="card-text"> <b><%= listing.title %></b></p>
             <p class="card-text"></p><%= listing.description %> </p>
             <p class="card-text"> &#8377 <%= listing.price.toLocaleString("en-IN") %> </p>
