--- a/WanderLust/views/listings/show.ejs
+++ b/WanderLust/views/listings/show.ejs
@@ -19,12 +19,18 @@
 
     <br>
 </div>
+
+<!-- iss line ke wjh se new error aa rha hai -->
+
 <div class="btns">
     <a href="/listings/<%= listing._id %>/edit" class="btn add-btn btn-dark col-2 offset-3">Edit</a>
+
     <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
         <button class="btn btn-dark offset-5">Delete</button>
     </form>
 </div>
+
+
 
 <div class="row mt-3">
     <div class="col-8 offset-3">
