--- a/WanderLust/views/listings/show.ejs
+++ b/WanderLust/views/listings/show.ejs
@@ -20,8 +20,6 @@
     <br>
 </div>
 
-<!-- iss line ke wjh se new error aa rha hai -->
-
 <div class="btns">
     <a href="/listings/<%= listing._id %>/edit" class="btn add-btn btn-dark col-2 offset-3">Edit</a>
 
@@ -30,10 +28,10 @@
     </form>
 </div>
 
-
-
+<!-- REVIEW -->
 <div class="row mt-3">
     <div class="col-8 offset-3">
+        <% if(currUser) { %>
         <h4>Leave a review</h4>
         <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation">
             <div>
@@ -49,14 +47,15 @@
             </div>
             <button class="btn btn-outline-dark">Submit</button>
         </form>
-        <hr>
+        <% } %>
+ <hr>
         <p><b>All reviews</b></p>
         
         <div class="row">
             <% for(review of listing.reviews) { %>
                 <div class="card col-5 ms-3 mb-3">
                     <div class="card-body">
-                        <h5 class="card-title">Jane Doe</h5>
+                        <h5 class="card-title">@<%= review.author.username %></h5>
                         <p class="card-text"><%= review.comment %></p>
                         <p class="card-text"><%= review.rating %> stars</p>
                     </div>
