--- a/WanderLust/views/listings/new.ejs
+++ b/WanderLust/views/listings/new.ejs
@@ -14,7 +14,7 @@
         <div class="mb-3">
           <label for="title" class="form-label">Title</label>
           <input
-            name="listing[title] "
+            name="listing[title]"
             placeholder="Add a catchy title"
             type="text"
             class="form-control"
@@ -47,10 +47,9 @@
         <div class="mb-3">
           <label for="image" class="form-label">Upload Listing Image</label>
           <input
-            name="listing[image][url]"
+            name="image"
             type="file"
             class="form-control"
-            value="https://images.unsplash.com/photo-1501785888041-af3ef285b470?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fHRyYXZlbHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=800&q=60"
           />
         </div>
 
